# src/routes/user-router.js
@@ -59,15 +59,11 @@ router.route("/update-details").post(verifyJWT,updateUserDetails) //Test Passed
 router.route("/get-user").get(verifyJWT, getCurrentUser) //Test Passed
 
 
-
 //getAllUsers - TO LIST CHANNELS , HOME PAGE
 router.route("/all-users").get(verifyJWT, getAllUsers)
 
 //getWatchHistory - WATCH HISTORY BUTTON, HISTORY PAGE
 router.route("/history").get(verifyJWT, getWatchHistory)
-
-//getUser
-/* router.route('/:id').get(getUser) */
 
 //getChannelDetails - CHANNEL BUTTON, OPEN CHANNEL PAGE
 router.route("/:id").get(verifyJWT,getUserChannelProfile)
